[package]
name = "bcdl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
thiserror = "1.0.63"
url = "2.5.2"

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = [
    "run-cargo-check",
    "run-cargo-clippy",
    "run-cargo-fmt",
] }
