[package]
name = "bcdl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["blocking"] }
scraper = "0.20.0"
serde_json = "1.0.127"
thiserror = "1.0.63"
url = "2.5.2"

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = [
    "run-cargo-check",
    "run-cargo-clippy",
    "run-cargo-fmt",
] }
